CORREÇÃO DE BUG

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Pé na estrada</title>
     </head>
-    <body style="background-repeat: no-repeat; background-size: 100% 100%; background-attachment:auto; background-image: url('http://st.gde-fon.com/wallpapers_original/649566_shosse_doroga_goryi_perpektiva_1920x1296_www.Gde-Fon.com.jpg');">
+    <body style="background-repeat: no-repeat; background-size: 100% 100%; background-attachment:auto; background-image: url('./assets/img/fundo_pg.jpg');">
         <!-- menu -->
         <nav class="navbar navbar-expand-lg navbar-dark shadow mb-3 border border-secondary rounded">
             <a class="navbar-brand" href="#">Pé na estrada</a>
