--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
         <!-- /menu-->
         <div class="container" style="margin-top: 65px;">
-            <div class="row align-items-center border border-secondary rounded">
+            <div style="background-image: url('./assets/img/fundo.png');" class="row align-items-center mb-5 rounded">
                 <div class="col-sm md-6 m-2">
                     <h1 class="texto">
                         Cortando longas rodovias
@@ -67,14 +67,14 @@
                 </div>
             </div>
 
-            <div class="row align-items-center mb-5 border border-secondary rounded" id="cadastro">
-                <div class="col-sm md-6 m-2">
-                    <h2 class="text-center texto">
+            <div class="row align-items-center align-middle mb-5  rounded" style="background-image: url('./assets/img/fundo.png');" id="cadastro">
+                <div  class="col-sm md-6 m-2">
+                    <h2 class="text-center align-middle">
                         Participe do maior evento online de caminhoneiros do Brasil,
                         faça seu cadastro e fique por dentro de todas novidades!
                     </h2>
                 </div>
-                <div class="col-sm md-6 m-2">
+                <div style="background-image: url('./assets/img/fundo.png');" class="col-sm md-6 m-2">
                     <h2 class="text-center texto"> Cadastro</h2>
                     <form>
                         <div class="form-row">
@@ -139,9 +139,14 @@
                             </div>
                         </div>
 
-                        <button type="submit" class="btn btn-primary">Entrar</button>
+                        <button type="submit" class="btn btn-primary mb-3">Entrar</button>
                     </form>
                 </div>
+            </div>
+            <div class="row mb-5  rounded" style="background-image: url('./assets/img/fundo.png');">
+                <div class="col-6 p-2" style="margin: auto; width: 560px; height: 315px;">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/sToKvxcXCzM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>    
             </div>
             <div class="row align-items-center mb-5" id="dicas">
                 <div class="card-group">
